<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.tenie</groupId>
	<artifactId>SQLucky-pom</artifactId>
	<version>2.0.0</version>
	<packaging>pom</packaging>
	<modules>
		<module>sdk</module>
		<module>plugin/Note</module>
		<module>plugin/WorkDataBackup</module>
		<module>plugin/DB2_connector</module>
		<module>plugin/H2_connector</module>
		<module>plugin/Sqlite_connector</module>
		<module>plugin/Mysql_connector</module>
		<module>plugin/Mariadb_connector</module>
		<module>plugin/Postgresql_connector</module>
		<module>plugin/Data_model</module>
		<module>plugin/Code_generation</module>
		<module>app</module>
	</modules>


	<properties>
		<sqlucky.version>2.0.0</sqlucky.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<javafx.version>18.0.2</javafx.version>
		<jfoenix.version>9.0.10</jfoenix.version>
		<richtextfx.version>0.10.6</richtextfx.version>
		<controlsfx.version>11.1.0</controlsfx.version>
		<sql.formatter.version>1.0.4</sql.formatter.version>
		<commons.io.version>2.8.0</commons.io.version>
		<slf4j.api.version>1.7.30</slf4j.api.version>
		<log4j.version>2.17.2</log4j.version>
		<sqlite.jdbc.version>3.34.0</sqlite.jdbc.version>
		<h2.jdbc.version>1.4.197</h2.jdbc.version>
		<mysql.jdbc.version>5.1.35</mysql.jdbc.version>
		<fastjson.version>1.2.76</fastjson.version>

	</properties>

	<dependencyManagement>
		<dependencies>
		 
<dependency>
    <groupId>cn.hutool</groupId>
    <artifactId>hutool-all</artifactId>
    <version>5.8.12</version>
</dependency>
<!-- https://mvnrepository.com/artifact/org.apache.ant/ant -->
<!-- <dependency>
    <groupId>org.apache.ant</groupId>
    <artifactId>ant</artifactId>
    <version>1.10.13</version>
</dependency> -->

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.4</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis.generator</groupId>
				<artifactId>mybatis-generator-core</artifactId>
				<version>1.3.6</version>
			</dependency>

			<dependency>
				<groupId>com.jcraft</groupId>
				<artifactId>jsch</artifactId>
				<version>0.1.54</version>
			</dependency>
			 
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.9.2</version>
			</dependency>
		
			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-SDK</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>

			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Plugin-Note</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Plugin-WorkDataBackup</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>
			
			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Plugin-Data-model</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>

			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Connector-DB2</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Connector-H2</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Connector-Sqlite</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Connector-Mysql</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Connector-Mariadb</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Connector-Postgresql</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tenie</groupId>
				<artifactId>SQLucky-Plugin-Code-Generation</artifactId>
				<version>${sqlucky.version}</version>
			</dependency>

			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-media</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			
			<dependency>
			    <groupId>org.openjfx</groupId>
			    <artifactId>javafx-web</artifactId>
			   	<version>${javafx.version}</version>
			</dependency>
			

			 
			<dependency>
			    <groupId>org.mybatis</groupId>
			    <artifactId>mybatis</artifactId>
			    <version>3.5.9</version>
			</dependency>
			<!-- <dependency>
			    <groupId>org.javalite</groupId>
			    <artifactId>activejdbc</artifactId>
			    <version>3.1-j11</version>
			</dependency> -->


			<!-- 控件库 -->
			<dependency>
				<groupId>com.jfoenix</groupId>
				<artifactId>jfoenix</artifactId>
				<version>${jfoenix.version}</version>
			</dependency>

			<dependency>
				<groupId>org.fxmisc.richtext</groupId>
				<artifactId>richtextfx</artifactId>
				<version>${richtextfx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.controlsfx</groupId>
				<artifactId>controlsfx</artifactId>
				<version>${controlsfx.version}</version>
			</dependency>

			<!-- sql 格式化 -->
			<dependency>
				<groupId>com.github.vertical-blank</groupId>
				<artifactId>sql-formatter</artifactId>
				<version>${sql.formatter.version}</version>
			</dependency>

			<!-- io 操作文件 -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.api.version}</version>
			</dependency>
			
			<!-- 文件字符集 -->
			<dependency>
				<groupId>com.github.albfernandez</groupId>
				<artifactId>juniversalchardet</artifactId>
				<version>2.4.0</version>
			</dependency>
			<!-- fastjson -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>
			<!-- 数据库 JDBC -->
			<dependency>
				<groupId>com.ibm.db2</groupId>
				<artifactId>jcc</artifactId>
				<version>11.5.6.0</version>
			</dependency>

			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>8.0.26</version>
			</dependency>

			<dependency>
				<groupId>org.mariadb.jdbc</groupId>
				<artifactId>mariadb-java-client</artifactId>
				<version>2.7.3</version>
			</dependency>

			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.jdbc.version}</version>
			</dependency>

			<dependency>
				<groupId>org.xerial</groupId>
				<artifactId>sqlite-jdbc</artifactId>
				<version>${sqlite.jdbc.version}</version>
			</dependency>

			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>42.2.23</version>
			</dependency>



			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j-impl</artifactId>
				<version>${log4j.version}</version>
			</dependency> 
			
			<dependency>
				<groupId>org.apache.httpcomponents.client5</groupId>
				<artifactId>httpclient5</artifactId>
				<version>5.1.3</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.httpcomponents.client5</groupId>
				<artifactId>httpclient5-fluent</artifactId>
				<version>5.1.3</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents.core5</groupId>
				<artifactId>httpcore5</artifactId>
				<version>5.1.3</version>
			</dependency>

			<dependency>
				  <groupId>commons-codec</groupId>
				  <artifactId>commons-codec</artifactId>
				  <version>1.15</version>
			</dependency>


			 
		
		</dependencies>
	</dependencyManagement>

	<build>
		<!-- 插件声明 -->
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
			</plugins>


		</pluginManagement>

	</build>
	
</project>